--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.3",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.39",
+    "vanilla-calendar-pro": "^2.9.6",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   },
